--- a/Client/lunchBlazor.Client.csproj
+++ b/Client/lunchBlazor.Client.csproj
@@ -1,23 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.16" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.16"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.16" PrivateAssets="all"/>
+    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Shared\lunchBlazor.Shared.csproj" />
+    <ProjectReference Include="..\Shared\lunchBlazor.Shared.csproj"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js"/>
   </ItemGroup>
-
 </Project>
