--- a/Shared/lunchBlazor.Shared.csproj
+++ b/Shared/lunchBlazor.Shared.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
-    <SupportedPlatform Include="browser" />
+    <SupportedPlatform Include="browser"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Sieve" Version="2.5.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.21"/>
   </ItemGroup>
 </Project>
