--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "defaultConn": "Server=dev-sqlsvrde05.unitedtractors.com\\HCDB_DEV;Database=lunchapp;User ID=adminutone;Password=utone4dmiN;TrustServerCertificate=True"
+    "defaultConn": "Server=dev-sqlsvrde05.unitedtractors.com\\HCDB_DEV;Database=ManPowerPlanning;User ID=adminutone;Password=utone4dmiN;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
