commit client side

--- a/Client/lunchBlazor.Client.csproj
+++ b/Client/lunchBlazor.Client.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RazorHotReloadOnDebug>true</RazorHotReloadOnDebug>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
   <ItemGroup>
