--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,42 +2,47 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch and Debug Standalone Blazor WebAssembly App",
-            "type": "blazorwasm",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "url": "https://localhost:7039;http://localhost:5130" // Tell launch where to find site
-        },
-        {
-            "name": "Watch",
+            "name": "Blazor Server Debug",
             "type": "coreclr",
             "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Server/bin/Debug/net6.0/lunchBlazor.Server.dll",
+            "args": [],
             "cwd": "${workspaceFolder}",
-            "program": "dotnet",
-            "args": [
-                "watch",
-                "--project",
-                ".",
-                "--verbose" // Let's us confirm browser connects with hot reload capabilities
-            ],
-            "preLaunchTask": "build" // Ensure we don't watch an unbuilt site
-        },
-        {
-            "name": "Attach",
-            "type": "blazorwasm",
-            "request": "attach",
-            "cwd": "${workspaceFolder}",
-            "url": "https://localhost:7039;http://localhost:5130", // Tell launch where to find site
-            "timeout": 120000, // Allows time for the site to launch
-        }
-    ],
-    "compounds": [
-        {
-            "name": "Debug with Hot Reload",
-            "configurations": [
-                "Watch",
-                "Attach"
-            ]
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "pipeTransport": {
+                "pipeProgram": "C:\\Program Files\\dotnet\\dotnet.exe",
+                "pipeArgs": [
+                    "exec",
+                    "${workspaceFolder}/Server/bin/Debug/net6.0/lunchBlazor.Server.dll"
+                ],
+                "quoteArgs": false,
+                "debuggerPath": "C:\\Program Files\\dotnet\\sdk\\6.0.408\\"
+            },
+            "logging": {
+                "moduleLoad": false,
+                "exception": {
+                    "excludePatterns": [
+                        ".*UnauthorizedAccessException",
+                        ".*NotSupportedException",
+                        ".*FileNotFoundException",
+                        ".*InvalidOperationException",
+                        ".*ObjectDisposedException",
+                        "^System\\.InvalidCastException"
+                    ]
+                }
+            },
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
         }
     ]
 }
