--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,48 +1,14 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Blazor Server Debug",
-            "type": "coreclr",
+            "name": "Launch and Debug Standalone Blazor WebAssembly App",
+            "type": "blazorwasm",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Server/bin/Debug/net6.0/lunchBlazor.Server.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
-            "pipeTransport": {
-                "pipeProgram": "C:\\Program Files\\dotnet\\dotnet.exe",
-                "pipeArgs": [
-                    "exec",
-                    "${workspaceFolder}/Server/bin/Debug/net6.0/lunchBlazor.Server.dll"
-                ],
-                "quoteArgs": false,
-                "debuggerPath": "C:\\Program Files\\dotnet\\sdk\\6.0.408\\"
-            },
-            "logging": {
-                "moduleLoad": false,
-                "exception": {
-                    "excludePatterns": [
-                        ".*UnauthorizedAccessException",
-                        ".*NotSupportedException",
-                        ".*FileNotFoundException",
-                        ".*InvalidOperationException",
-                        ".*ObjectDisposedException",
-                        "^System\\.InvalidCastException"
-                    ]
-                }
-            },
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
+            "cwd": "${workspaceFolder}/Server"
         }
     ]
 }
