--- a/Client/lunchBlazor.Client.csproj
+++ b/Client/lunchBlazor.Client.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.16"/>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.16" PrivateAssets="all"/>
     <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0"/>
+    <PackageReference Include="Blazored.Modal" Version="7.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\lunchBlazor.Shared.csproj"/>
