--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UmsUrlLogin": "https://utmiddleware-dev.unitedtractors.com/user/api/user/login"
 }
